# flet-search-bar

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  setup.py
.github/workflows/: release-please.yml  test-pypi.yml
src/gitruck/flet_search_bar/: __init__.py  search_bar.py  search_bar_style.py
tests/: test_search_bar.py
